# glsweb

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
.git-hooks/: commit-msg
assets/: tailwind.css
drsx/: Cargo.toml
drsx/src/: applayout.rs  avatar.rs  icons.rs  lib.rs  logo.rs  menu.rs  navigation.rs  sidebar.rs
dsrv/: Cargo.toml
dsrv/src/: auth.rs  envs.rs  lib.rs  server.rs  state.rs
src/: app.rs  auth.rs  config.rs  main.rs  routes.rs
src/component/: home.rs  mod.rs  protein.rs
src/core/: routes.rs
src/server/: functions.rs  mod.rs  protein.rs  server.rs
src/ui/: routes.rs
src/ui/pages/: home.rs  login.rs  logout.rs  mod.rs  protein.rs
src/views/: about.rs  home.rs  login.rs  logout.rs  mod.rs  protein.rs
